--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@fortawesome/fontawesome-free-solid": "^5.0.10",
     "@fortawesome/vue-fontawesome": "^0.0.22",
     "@nuxtjs/google-analytics": "^2.0.2",
+    "@nuxtjs/google-adsense": "^1.1.3",
     "@nuxtjs/pwa": "^2.0.8",
     "moment": "^2.22.0",
     "nuxt": "^1.4.0"
