--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "precommit": "npm run lint"
   },
   "dependencies": {
-    "@nuxtjs/google-analytics": "^2.0.2",
     "@nuxtjs/google-adsense": "^1.1.3",
+    "@nuxtjs/google-analytics": "^2.0.2",
     "@nuxtjs/pwa": "^2.0.8",
     "moment": "^2.22.0",
     "nuxt": "^1.4.0"
@@ -23,19 +23,24 @@
     "axios": "^0.18.0",
     "babel-eslint": "^8.2.2",
     "eslint": "^4.19.1",
+    "eslint-config-prettier": "^2.9.0",
     "eslint-config-standard": "^11.0.0",
     "eslint-loader": "^2.0.0",
     "eslint-plugin-html": "^4.0.2",
     "eslint-plugin-import": "^2.10.0",
     "eslint-plugin-node": "^6.0.1",
+    "eslint-plugin-prettier": "^2.6.0",
     "eslint-plugin-promise": "^3.7.0",
     "eslint-plugin-standard": "^3.0.1",
+    "eslint-plugin-vue": "^4.5.0",
     "node-sass": "^4.8.3",
+    "prettier": "^1.12.1",
     "pug": "^2.0.3",
     "pug-loader": "^2.4.0",
     "smooth-scroll": "^12.1.5",
     "stylus": "^0.54.5",
-    "stylus-loader": "^3.0.2"
+    "stylus-loader": "^3.0.2",
+    "vue-eslint-parser": "^2.0.3"
   },
   "config": {
     "nuxt": {
