--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "eslint-plugin-vue": "^4.5.0",
     "node-sass": "^4.8.3",
     "prettier": "^1.12.1",
+    "prettier-eslint": "^8.8.1",
     "pug": "^2.0.3",
     "pug-loader": "^2.4.0",
     "smooth-scroll": "^12.1.5",
