--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint": "^4.19.1",
     "eslint-config-prettier": "^2.9.0",
     "eslint-config-standard": "^11.0.0",
+    "eslint-config-typescript": "^1.0.2",
     "eslint-loader": "^2.0.0",
     "eslint-plugin-html": "^4.0.2",
     "eslint-plugin-import": "^2.10.0",
@@ -32,6 +33,7 @@
     "eslint-plugin-prettier": "^2.6.0",
     "eslint-plugin-promise": "^3.7.0",
     "eslint-plugin-standard": "^3.0.1",
+    "eslint-plugin-typescript": "^0.12.0",
     "eslint-plugin-vue": "^4.5.0",
     "node-sass": "^4.8.3",
     "prettier": "^1.12.1",
@@ -41,6 +43,9 @@
     "smooth-scroll": "^12.1.5",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
+    "ts-loader": "^3.5.0",
+    "typescript": "^2.8.3",
+    "typescript-eslint-parser": "^15.0.0",
     "vue-eslint-parser": "^2.0.3"
   },
   "config": {
