--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@nuxtjs/google-adsense": "^1.1.3",
     "@nuxtjs/google-analytics": "^2.0.2",
     "@nuxtjs/pwa": "^2.0.8",
+    "gsap": "^1.20.4",
     "moment": "^2.22.0",
     "nuxt": "^1.4.0"
   },
