--- a/package.json
+++ b/package.json
@@ -10,18 +10,19 @@
     "start": "nuxt start",
     "generate": "nuxt generate",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
+    "fix": "eslint --fix components/*.vue pages/*.vue store/*.js",
     "precommit": "npm run lint"
   },
   "dependencies": {
     "@nuxtjs/google-adsense": "^1.1.3",
     "@nuxtjs/google-analytics": "^2.0.2",
     "@nuxtjs/pwa": "^2.0.8",
+    "axios": "^0.18.0",
     "gsap": "^1.20.4",
     "moment": "^2.22.0",
     "nuxt": "^1.4.0"
   },
   "devDependencies": {
-    "axios": "^0.18.0",
     "babel-eslint": "^8.2.2",
     "eslint": "^4.19.1",
     "eslint-config-prettier": "^2.9.0",
@@ -31,7 +32,7 @@
     "eslint-plugin-html": "^4.0.2",
     "eslint-plugin-import": "^2.10.0",
     "eslint-plugin-node": "^6.0.1",
-    "eslint-plugin-prettier": "^2.6.0",
+    "eslint-plugin-prettier": "^2.6.2",
     "eslint-plugin-promise": "^3.7.0",
     "eslint-plugin-standard": "^3.0.1",
     "eslint-plugin-typescript": "^0.12.0",
@@ -48,6 +49,10 @@
     "typescript": "^2.8.3",
     "typescript-eslint-parser": "^15.0.0",
     "vue-eslint-parser": "^2.0.3"
+  },
+  "prettier": {
+    "semi": false,
+    "singleQuote": true
   },
   "config": {
     "nuxt": {
