--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate",
+    "test": "eslint components/*.vue pages/*.vue nuxt.config.js modules/typescript.js plugins/*.js",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
-    "fix": "eslint --fix components/*.vue pages/*.vue store/*.js",
+    "fix": "eslint --fix components/*.vue pages/*.vue",
+    "fix:meta": "eslint --fix nuxt.config.js .eslintrc.js modules/typescript.js plugins/*.js",
     "precommit": "npm run lint"
   },
   "dependencies": {
