--- a/package.json
+++ b/package.json
@@ -15,20 +15,21 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.3.3",
+    "@nuxtjs/dotenv": "^1.1.1",
+    "moment": "^2.22.2",
     "nuxt": "^2.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.1.2",
     "@babel/plugin-proposal-optional-chaining": "^7.0.0",
     "@babel/plugin-syntax-jsx": "^7.0.0",
-    "@nuxtjs/dotenv": "^1.1.1",
     "babel-eslint": "^10.0.1",
     "eslint": "^5.6.1",
     "eslint-config-prettier": "^3.1.0",
     "eslint-friendly-formatter": "^4.0.1",
     "eslint-loader": "^2.1.1",
     "eslint-plugin-prettier": "^2.7.0",
-    "eslint-plugin-vue": "^4.0.0",
+    "eslint-plugin-vue": "^4.7.1",
     "node-sass": "^4.9.3",
     "nuxt-sass-resources-loader": "^2.0.5",
     "prettier": "^1.14.3",
